--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "tailwind": "npx tailwindcss -i src/css/styles.css -o build/styles.css",
     "build:css": "postcss src/css/styles.css -o build/styles.css",
-    "watch:css": "postcss src/css/styles.css -o build/styles.css --watch"
+    "watch:css": "postcss src/css/styles.css -o build/styles.css --watch",
+    "prettier": "prettier --write '**/*.html'"
   },
   "keywords": [],
   "author": "Helfrid Hochegger",
@@ -14,6 +16,7 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "postcss-cli": "^11.0.0",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.14"
   }
 }
